Bugfix e otimizações na visibilidade e temas

--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -7,31 +7,19 @@
     --change-speed: 0.3s;
 }
 
-.tema-azul {
-    --color1: #27A4F2;
-    --color2: #3EAEF4;
-    --color3: #6EC2F7;
-    --color4: #9FD7F9;
-    --color5: #CFEBFC;
+.tema-claro {
+    --color1: #D7D7D7;
+    --color2: #E1E1E1;
+    --color3: #EBEBEB;
+    --color4: #F5F5F5;
+    --color5: #FFFFFF;
     color: black;
 }
 
-.tema-verde {
-    --color1: #24C16E;
-    --color2: #80E6AF;
-    --color3: #AAEDC9;
-    --color4: #D4F7E4;
-    --color5: #E9FBF0;
-    color: black;
-}
-
-.tema-laranja {
-    --color1: #F5A940;
-    --color2: #F7BF5E;
-    --color3: #FAD47B;
-    --color4: #FCEA99;
-    --color5: #FFFFB6;
-    color: black;
+.tema-claro > body {
+    background-image: url("/www.athenalocadora.com/images/background_claro.png");
+    background-size: cover;
+    background-repeat: no-repeat; 
 }
 
 .tema-escuro {
@@ -43,7 +31,56 @@
     color: white;
 }
 
+.tema-escuro > body {
+    background-image: url("/www.athenalocadora.com/images/background_escuro.png");
+    background-size: cover;
+    background-repeat: no-repeat; 
+}
 
+.tema-azul {
+    --color1: #27A4F2;
+    --color2: #3EAEF4;
+    --color3: #6EC2F7;
+    --color4: #9FD7F9;
+    --color5: #CFEBFC;
+    color: black;
+}
+
+.tema-azul > body {
+    background-image: url("/www.athenalocadora.com/images/background_azul.png");
+    background-size: cover;
+    background-repeat: no-repeat; 
+}
+
+.tema-verde {
+    --color1: #24C16E;
+    --color2: #80E6AF;
+    --color3: #AAEDC9;
+    --color4: #D4F7E4;
+    --color5: #E9FBF0;
+    color: black;
+}
+
+.tema-verde > body {
+    background-image: url("/www.athenalocadora.com/images/background_verde.png");
+    background-size: cover;
+    background-repeat: no-repeat; 
+}
+
+.tema-laranja {
+    --color1: #F5A940;
+    --color2: #F7BF5E;
+    --color3: #FAD47B;
+    --color4: #FCEA99;
+    --color5: #FFFFB6;
+    color: black;
+}
+
+.tema-laranja > body {
+    background-image: url("/www.athenalocadora.com/images/background_laranja.png");
+    background-size: cover;
+    background-repeat: no-repeat; 
+}
 
 * {
     transition: 0.3s;
@@ -146,23 +183,28 @@ a {
 }
 
 .tema-select option[value="0"] {
-    background-color: #FFFFB6;
+    background-color: #FFFFFF;
     color: black;
 }
 
 .tema-select option[value="1"] {
-    background-color: #E9FBF0;
-    color: black;
+    background-color: #333333;
+    color: white;
 }
 
 .tema-select option[value="2"] {
-    background-color: #CFEBFC;
+    background-color: #FFFFB6;
     color: black;
 }
 
 .tema-select option[value="3"] {
-    background-color: #333333;
-    color: white;
+    background-color: #E9FBF0;
+    color: black;
+}
+
+.tema-select option[value="4"] {
+    background-color: #CFEBFC;
+    color: black;
 }
 
 .tema-select:hover {
